# multi-view-object-data-generation

./: .gitignore  CLAUDE.md  README.md  SPATIAL_SKILLS.md  outputs  pyproject.toml  requirements.txt
cli/: __main__.py  _frames_io.py  _io.py  balance.py  compare_sampling.py  debug_pipeline.py  filter.py  generate.py  inspect_pair.py  label.py  match.py  pair_gate.py  perceive.py  qc.py  sample.py  verify.py
configs/: label_prompt.txt  pair_selection.json  quality_filter_prompt.txt  scannet200_general_objects.txt  verifier_prompt.txt
configs/runs/: cpu_smoke.json  default.json  paper_default.json  qwen3vl_default.json  qwen3vl_vote3.json
configs/skills/: anchor.json  counting.json  cross_depth_variation.json  cross_object_correspondence.json  cross_occlusion_visibility.json  relative_direction.json  (+3 more)
datasets/: README.md  base.py  matterport.py  scannet.py  scannetpp.py
models/: _frame_ref.py  _json_salvage.py  _vlm_base.py  base.py  noop.py  registry.py
pipeline/: config.py  cosmic.py  dedup.py  emit.py  geometry.py  label_blocklist.py  label_matcher.py  manifest.py  match.py  pairs.py  pairs_io.py  perception_workers.py  project.py  rng.py  stages.py  wandb_uploader.py
scripts/: generate_qwen3vl.sh  label_qwen3vl.sh  run_vlm_stage.sh
tests/: test_cache_keys.py  test_chain_e2e.py  test_config_loader.py  test_io_loader.py  test_mock_adapter.py  test_pairs_io.py  test_perception_batching.py  test_pipeline_smoke.py  test_project_roundtrip.py  test_stage_pair_gate.py  test_stages.py
viz/: __init__.py  __main__.py  _args.py  cache_io.py  overlays.py  palette.py
(+47 files in other folders)
